--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "event-notify",
-  "version": "0.1.0",
+  "name": "husky-event-notify",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "",
-    "test": "jest"
+    "test": "jest",
+    "build":"babel src -o index.js"
+
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/followWinter/event-notify#readme",
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-jest": "^17.0.2",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
@@ -25,5 +27,8 @@
   },
   "jest": {
     "testEnvironment": "node"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.20.0"
   }
 }
