--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "husky-event-notify",
-  "version": "0.1.3",
+  "version": "0.1.10",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.min.js",
   "scripts": {
     "test": "jest",
-    "build":"babel src -o index.js"
-
+    "build": "babel src -o index.js",
+    "pub": "gulp &&npm publish --access=public "
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,11 @@
     "babel-jest": "^17.0.2",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-bump": "^2.7.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^3.0.0",
     "jest-cli": "^17.0.3"
   },
   "jest": {
